--- a/Workshop-1/Curriculum.html
+++ b/Workshop-1/Curriculum.html
@@ -15,10 +15,16 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-6">
-                <h1 class="mb-4">Carlos Andrés Bravo</h1>
-                <p><strong>Correo electrónico:</strong> bravo9386@gmailcom</p>
-                <p><strong>Teléfono:</strong> +506 70463777</p>
-                <p><strong>Dirección:</strong> 1km oeste del Liceo San Carlos, Ciudad Quesada, Costa Rica</p>
+                <section>
+                    <h1 class="mb-4">Carlos Andrés Bravo</h1>
+                    <p><strong>Correo electrónico:</strong> bravo9386@gmailcom</p>
+                    <p><strong>Teléfono:</strong> +506 70463777</p>
+                    <p><strong>Dirección:</strong> 1km oeste del Liceo San Carlos, Ciudad Quesada, Costa Rica</p>
+                    <header><strong>Sobre mi:</strong></header>
+                    <main role="main">
+                        <p>Soy una persona</p>
+                    </main>
+                </section>
             </div>
             <div class="col-md-6">
                 <h2 class="mb-4 section-title">Educación</h2>
@@ -35,9 +41,11 @@
                 <h2 class="mb-4 section-title">Experiencia Laboral</h2>
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Intelec</h5>
-                        <p class="card-text">Asistente, 2021 - 2023</p>
-                        <p class="card-text">Vendedor - Antención al cliente</p>
+                        <article>
+                            <h5 class="card-title">Intelec</h5>
+                            <p class="card-text">Asistente, 2021 - 2023</p>
+                            <p class="card-text">Vendedor - Antención al cliente</p>
+                        </article>
                     </div>
                 </div>
             </div>
@@ -70,5 +78,8 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </body>
+<foorter>
+    <p> @ 2024 Bravo</p>
+</foorter>
 
 </html>
