--- a/Workshop-3/index.html
+++ b/Workshop-3/index.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="one-half column">
                     <h4 class="hero-heading">Stop coding non-responsive sites. Let users view sites from anywhere.</h4>
-                    <a class="button button-primary" href="*">Try Skeleton</a>
+                    <a class="button button-primary" href="https://skeleton-framework.github.io/">Try Skeleton</a>
                 </div>
                 <div class="one-half column phones">
                     <img class="phone" src="images/iphone.png">
@@ -51,7 +51,7 @@
             <h3 class="section-heading">Need help getting started?</h3>
             <p class="section-description">Skeleton is an amazingly easy place to start with responsive development. If
                 you want to learn more, just visit the documentation!</p>
-            <a class="button button-primary" href="*">View Skeleton Docs</a>
+            <a class="button button-primary" href="https://github.com/skeleton-framework/skeleton-framework">View Skeleton Docs</a>
         </div>
     </div>
 
